# equuleus

./: Cargo.toml  README.md  log4rs.yml
src/: app.rs  banner.txt  errors.rs  lib.rs  main.rs  tty.rs
