[package]
name = "equuleus"
version = "0.1.0"
authors = ["Jeremy Zheng <jitang.zheng@gmail.com>", "Margaret Ma <yananma0304@gmail.com>"]

[profile.release]
lto = true

[dependencies]
log = "0.4"
log4rs = "0.8"
env_logger = "0.5"
clap = "2.32"
error-chain = "0.12"
chrono = "0.4"
serialport = "3.1"
imgui = "0.0.21"
